--- a/ClientTodo/ClientTodo/Views/Todo/Create.cshtml
+++ b/ClientTodo/ClientTodo/Views/Todo/Create.cshtml
@@ -28,9 +28,15 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <input asp-for="AppUserId" class="form-control" />
-                <span asp-validation-for="AppUserId" class="text-danger"></span>
+                @* <label asp-for="AppUserId" class="control-label"></label> *@
+                <input type="hidden" asp-for="AppUserId" class="form-control" />
+                @* <span asp-validation-for="AppUserId" class="text-danger"></span> *@
+            </div>
+            <div class="form-group">
+                <label asp-for="TaskTypeId" class="control-label"></label>
+                <select asp-items="@ViewBag.TypeID" class="form-control" asp-for="TaskTypeId">
+                    <option>Select Task Type..</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
