--- a/ClientTodo/ClientTodo/Views/Todo/Index.cshtml
+++ b/ClientTodo/ClientTodo/Views/Todo/Index.cshtml
@@ -21,6 +21,7 @@
             <th scope="col">Task Name</th>
             <th scope="col">Due Date</th>
             <th scope="col">Is Complete</th>
+            <th scope="col">Task Type</th>
             <th scope="col">Username</th>
         </tr>
 
@@ -40,6 +41,16 @@
                 <td>
                     @todo.IsComplete
                 </td>
+                @if (todo.Type != null)
+                {
+                    <td>
+                        @todo.Type.Name
+                    </td>
+                }
+                else
+                {
+                    <td>Uncatagorised</td>
+                }
                 <td>
                     @todo.AppUser.UserName
                 </td>
